# p2p_recog

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  test_email.py
crewai/p2precog/: .gitignore  README.md  pyproject.toml  setenv.example
crewai/p2precog/output/: app.py  recognition.py  recognition.py_design.md
crewai/p2precog/src/p2precog/: main.py
docs/: prd.md
recognition_portal/: __init__.py  auth.py  db.py  employee_directory.py  models.py  notifications.py  recognitions.py  web.py
recognition_portal/templates/: base.html  edit_points_recognition.html  employee_form.html  import_employees.html  index.html  portal_home.html
templates/: admin_employees.html  base.html  dashboard.html  index.html  login.html  portal_home.html  recognize.html
tests/: test_email_notifications.py  test_issue_10_optional_company_value.py  test_issue_11_text_only_message.py  test_issue_12_message_length.py  test_issue_13_immediate_feed_publication.py  test_issue_2_directory.py  test_issue_3_magic_link_auth.py  test_issue_4_non_monetary_recognition.py  test_issue_6_points_recognition.py  test_issue_7_self_recognition.py  test_issue_8_duplicate_recognition.py  test_issue_9_required_category.py  test_smtp_notifications.py
