[project]
name = "p2precog"
version = "0.1.0"
description = "p2precog using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
p2precog = "p2precog.main:run"
run_crew = "p2precog.main:run"
train = "p2precog.main:train"
replay = "p2precog.main:replay"
test = "p2precog.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
